--- a/GameDevRecipes.API/GameDevRecipes.API/appsettings.json
+++ b/GameDevRecipes.API/GameDevRecipes.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "GameDevRecipesDbConnectionString": "server=localhost;database=GameDevRecipesDbConnectionString;Trusted_Connection=true;TrustServerCertificate=true"
+    }
 }
